--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Pianfan's blog"
-description: "翩帆的个人技术博客"
+name: "Die Totenisel"
+description: "N/A"
 
 avatar: https://pianfan.github.io/images/avatar.jpg
 favicon: https://pianfan.github.io/images/favicon.ico
